# Discrete-math-exam

./: CMakeLists.txt  README.md  file.txt  main.cpp
build_release/: CMakeCache.txt  Discrete_math_exam  Makefile  cmake_install.cmake  pleasurs.txt
